# Machine-Learning-Library

./: CMakeLists.txt  DataSet.cpp  DataSet.h  DistanceMetric.cpp  DistanceMetric.h  Euclidean_Distance.cpp  Euclidean_Distance.h  KMeans.cpp  KMeans.h  KNN.cpp  KNN.h  Manhattan_Distance.cpp  Manhattan_Distance.h  Model.cpp  Model.h  main.cpp
